Keep incremental loader compatible with API 26